--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+frontend/node_modules
+frontend/dist
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/.env.development
+frontend/.env.test
+frontend/.env.production
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
